[package]
name = "rust-ssvm"
version = "0.0.1"
license = "AGPL-3.0"
authors = ["SecondState"]
description = "Rust-SSVM - a Portable EWASM Engine Binding Rust Interface"
edition = "2018"
repository = "https://github.com/second-state/rust-ssvm/"
build="build.rs"

[dependencies]
evmc-sys = { git = "https://github.com/ethereum/evmc", tag = "v6.3.1" }
libloading = "0.5"
hex = "0.4"
clap = "2.33.0"

[build-dependencies]
cmake = "0.1.42"