[package]
name = "rust-ssvm"
version = "0.0.4"
license = "AGPL-3.0"
authors = ["SecondState"]
description = "Rust-SSVM - a Portable EWASM Engine Binding Rust Interface"
edition = "2018"
repository = "https://github.com/second-state/rust-ssvm/"
build="build.rs"

[dependencies]
evmc-client = { version = "6.3.1", package="ssvm-evmc-client" }
libloading = "0.5"
hex = "0.4"
clap = "2.33.0"

[build-dependencies]
cmake = "0.1.44"
